services/SRV40074-productCatalog/ocp-deploy/components/soap-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    component: '#(deploy-name)#'
    group: fuse7-java-openshift
    version: '#(version.service)#'
  name: '#(deploy-name)#-route-soap'
spec:
  host: '#(project-id)#.#(wildcard)#'
  path: '#(prop.camel.soap.endpointurl)#'
  to:
    kind: Service
    name: '#(deploy-name)#'
